--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
+        <artifactId>maven-war-plugin</artifactId>
         <version>3.0.0-M3</version>
         <executions>
           <execution>
