--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
+          <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
         </plugin>
       </plugins>
@@ -32,7 +32,7 @@
       <plugin>
         <!-- Build an executable JAR -->
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
+        <artifactId>maven-war-plugin</artifactId>
         <version>3.2.0</version>
         <configuration>
           <archive>
@@ -46,7 +46,7 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
+        <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.0.0-M3</version>
         <executions>
           <execution>
