--- a/pom.xml
+++ b/pom.xml
@@ -31,39 +31,39 @@
     <plugins>
       <plugin>
         <!-- Build an executable JAR -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.0</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.mycompany.app.App</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
+ <project>
+  ...
+  <packaging>war</packaging>
+  ...
+  <build>
+    ...
+    <plugins>
+      ...
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M3</version>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.0-beta-1</version>
         <executions>
           <execution>
-            <id>enforce-maven</id>
+            <id>tomcat-run</id>
             <goals>
-              <goal>enforce</goal>
+              <goal>exec-war-only</goal>
             </goals>
+            <phase>package</phase>
             <configuration>
-              <rules>
-                <requireMavenVersion>
-                  <version>[3.5.4,)</version>
-                </requireMavenVersion>
-              </rules>
+              <path>foo</path>
+              <!-- optional only if you want to use a preconfigured server.xml file -->
+              <serverXml>src/main/tomcatconf/server.xml</serverXml>
+              <!-- optional values which can be configurable -->
+              <attachArtifactClassifier>default value is exec-war but you can customize</attachArtifactClassifier>
+              <attachArtifactClassifierType>default value is jar</attachArtifactClassifierType>
             </configuration>
           </execution>
         </executions>
       </plugin>
+      ...
     </plugins>
+    ...
   </build>
+  ...
 </project>
