--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,6 @@
     </pluginManagement>
     <plugins>
       <plugin>
-        <!-- Build an executable WAR -->
- <plugin>
     <artifactId>maven-war-plugin</artifactId>
     <configuration>
         <attachClasses>true</attachClasses>
@@ -43,4 +41,27 @@
             </resource>
         </webResources>
     </configuration>
-</plugin>
+     </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M3</version>
+        <executions>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>[3.5.4,)</version>
+                </requireMavenVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+</project>
