--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <webXml>target/web.xml</webXml>
         <webResources>
             <resource>
-                <directory>src/main/java/com/mycompany/app</directory>
+                <directory>src/main/java/com/mycompany/app/App.java</directory>
                 <filtering>true</filtering>
             </resource>
         </webResources>
