--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <plugins>
       <plugin>
     <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.1</version>   
     <configuration>
         <attachClasses>true</attachClasses>
         <webXml>target/web.xml</webXml>
