--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <version>3.3.1</version>   
     <configuration>
         <attachClasses>true</attachClasses>
-        <webXml>target/web.xml</webXml>
+        <webXml>..../WEB-INF/web.xml</webXml>
         <webResources>
             <resource>
                 <directory>src/main/java/com/mycompany/app</directory>
