--- a/pom.xml
+++ b/pom.xml
@@ -30,18 +30,12 @@
     </pluginManagement>
     <plugins>
       <plugin>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>3.3.1</version>   
-    <configuration>
-        <attachClasses>true</attachClasses>
-        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
-        <webResources>
-            <resource>
-                <directory>src/main/java/com/mycompany/app</directory>
-                <filtering>true</filtering>
-            </resource>
-        </webResources>
-    </configuration>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-war-plugin</artifactId>
+  <version>2.2</version>
+  <configuration>
+    <failOnMissingWebXml>false</failOnMissingWebXml>
+  </configuration>
      </plugin>
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
