--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
         </plugin>
+        <plugin>
+  <groupId>org.sonarsource.scanner.maven</groupId>
+  <artifactId>sonar-maven-plugin</artifactId>
+  <version>3.2</version>
+</plugin>
       </plugins>
     </pluginManagement>
     <plugins>
