--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
   <artifactId>sonar-maven-plugin</artifactId>
   <version>3.2</version>
 </plugin>
+      <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>2.7.1</version>
+        </plugin>
+
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
